Revert "Update package.json"
This reverts commit 1443240ae93ec6d384864d0cf11dbe910db8cda3.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
   "bugs": {
     "url": "https://github.com/Ismail-cloud/Newcastle-organizer-server/issues"
   },
-  "homepage": "https://github.com/Ismail-cloud/Newcastle-organizer-server#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "homepage": "https://github.com/Ismail-cloud/Newcastle-organizer-server#readme"
 }
